user class bug fix